[gd_scene load_steps=4 format=2]

[ext_resource path="res://main_scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://prefab_scenes/ScreenFader/ScreenFader.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/main_ui_theme.tres" type="Theme" id=3]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Spacer_00" type="Control" parent="MarginContainer/HBoxContainer"]
margin_right = 338.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="GoToGame" type="Button" parent="MarginContainer/HBoxContainer/MenuButtons"]
margin_top = 218.0
margin_right = 338.0
margin_bottom = 270.0
theme = ExtResource( 3 )
text = "Rise KPI"

[node name="Tutorial" type="Button" parent="MarginContainer/HBoxContainer/MenuButtons"]
margin_top = 274.0
margin_right = 338.0
margin_bottom = 326.0
theme = ExtResource( 3 )
text = "Tutorial"

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/MenuButtons"]
margin_top = 330.0
margin_right = 338.0
margin_bottom = 382.0
theme = ExtResource( 3 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer_01" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FadeLayer" type="CanvasLayer" parent="."]

[node name="ScreenFader" parent="FadeLayer" instance=ExtResource( 2 )]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MenuButtons/GoToGame" to="." method="_on_go_to_game_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MenuButtons/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MenuButtons/Exit" to="." method="_on_Exit_pressed"]
